--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,11 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "server.js",
-      "use": "@vercel/node"
+  "functions": {
+    "api/data.js": {
+      "runtime": "@vercel/node"
     }
-  ],
-
+  },
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "server.js"
-    }
+    { "src": "/api/data", "dest": "/api/data.js" }
   ]
-
 }
